[tool.poetry]
name = "langflow"
version = "0.0.46"
description = "Symbiose fork of A Python package with a built-in web application"
authors = ["Logspace <contact@logspace.ai>"]
maintainers = [

]
repository = "https://github.com/symbiose-technologies/langflow"
license = "MIT"
readme = "README.md"
keywords = ["nlp", "langchain", "openai", "gpt", "gui"]
packages = [{ include = "langflow", from = "src/backend" }]
include = ["src/backend/langflow/*", "src/backend/langflow/**/*"]


[tool.poetry.scripts]
langflow = "langflow.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
beautifulsoup4 = "^4.11.2"
google-search-results = "^2.4.1"
google-api-python-client = "^2.70.0"
typer = "^0.7.0"
gunicorn = "^20.1.0"
langchain = "^0.0.132"
openai = "^0.27.2"
types-pyyaml = "^6.0.12.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
mypy = "^1.1.1"
ruff = "^0.0.254"

[tool.poetry.group.expanded.dependencies]
langchain = { version = "^0.0.132", extras = [
    "anthropic", "cohere", "openai", "nlpcloud", "huggingface_hub", "jina", "manifest-ml", "elasticsearch", "opensearch-py", "google-search-results", "faiss-cpu", "sentence_transformers", "transformers", "spacy", "nltk", "wikipedia", "beautifulsoup4", "tiktoken", "jinja2", "pinecone-client", "weaviate-client", "redis", "google-api-python-client", "wolframalpha", "qdrant-client", "tensorflow-text", "pypdf", "networkx", "nomic", "aleph-alpha-client", "deeplake", "pgvector", "psycopg2-binary", "boto3", "pyowm"
] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
